--- a/lib/index.html
+++ b/lib/index.html
@@ -23,7 +23,7 @@
     Massage Joe's Back
     Archive Steph's Gif collection
     Take out trash
-  <span>
+  </span>
 
    Issue Bot Camera Capture Archive
 
